# misis2023f-22-03-bobkov-e-e

./: CMakeLists.txt  codeforces.id  readme.md  status.md
docs/: report.md
prj.codeforces/: 0041a.cpp  0059a.cpp  0112a.cpp  0136a.cpp  0148a.cpp  0151a.cpp  0200b.cpp  0268a.cpp  0281a.cpp  0282a.cpp  0677a.cpp  1030a.cpp  136a.cpp  1407a.cpp  148a.cpp  1675b.cpp  1701a.cpp  1771a.cpp  1800a.cpp  1879a.cpp  200b.cpp  268a.cpp  282a.cpp  339b.cpp  41a.cpp  579a.cpp  59a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  main.cpp
