add_executable(1771a 1771a.cpp)
add_executable(1701a 1701a.cpp)
add_executable(1800a 1800a.cpp)
add_executable(1879a 1879a.cpp)
add_executable(1407a 1407a.cpp)
add_executable(136a 136a.cpp)
add_executable(268a 268a.cpp)
add_executable(281a 281a.cpp)
add_executable(677a 677a.cpp)
add_executable(112a 112a.cpp)
add_executable(59a 59a.cpp)
add_executable(1030a 1030a.cpp)
add_executable(282a 282a.cpp)
add_executable(41a 41a.cpp)
add_executable(148a 148a.cpp)
add_executable(200b 200b.cpp)
add_executable(151a 151a.cpp)