add_executable(1771a 1771a.cpp)
add_executable(1701a 1701a.cpp)
add_executable(1800a 1800a.cpp)
add_executable(1879a 1879a.cpp)
add_executable(1407a 1407a.cpp)
add_executable(0136a 0136a.cpp)
add_executable(0268a 0268a.cpp)
add_executable(0281a 0281a.cpp)
add_executable(0677a 0677a.cpp)
add_executable(0112a 0112a.cpp)
add_executable(0059a 0059a.cpp)
add_executable(1030a 1030a.cpp)
add_executable(0282a 0282a.cpp)
add_executable(0041a 0041a.cpp)
add_executable(0148a 0148a.cpp)
add_executable(0200b 0200b.cpp)
add_executable(0151a 0151a.cpp)
add_executable(1675b 1675b.cpp)